--- a/package.json
+++ b/package.json
@@ -11,11 +11,7 @@
     "type": "git",
     "url": "git://github.com/seegno/express-oauth-server"
   },
-  "keywords": [
-    "express",
-    "oauth",
-    "oauth2"
-  ],
+  "keywords": ["express", "oauth", "oauth2"],
   "author": {
     "name": "Nuno Sousa",
     "email": "nfs@seegno.com"
@@ -24,7 +20,7 @@
   "dependencies": {
     "bluebird": "^3.0.5",
     "express": "^4.13.3",
-    "oauth2-server": "3.0.0"
+    "oauth2-server": "git+https://github.com/rubetrio/node-oauth2-server.git"
   },
   "devDependencies": {
     "body-parser": "^1.14.1",
